--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 									  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Detail</button>
 									  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 										<div class="modal-content modal-dialog modal-dialog-centered">
-											<img src="../static/images/013.png" alt="Card image cap">
+											<img src="./static/images/013.png" alt="Card image cap">
 										</div>
 									  </div>
 									<small class="text-body-secondary">2023.11.2</small>
