--- a/index.html
+++ b/index.html
@@ -98,14 +98,14 @@
 						<div class="col-lg-1 p-4"></div>
 						<div class="col-lg-4 col-12 p-4">
 							<div class="card">
-								<img class="card-img-top" src="../static/images/013.png" alt="Card image cap">
+								<img class="card-img-top" src="/static/images/013.png" alt="Card image cap">
 								<div class="card-body">
 								  <p class="card-text">😽I'd like to share my new work here after every update.</p>
 								  <div class="d-flex justify-content-between align-items-center">
 									  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Detail</button>
 									  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 										<div class="modal-content modal-dialog modal-dialog-centered">
-											<img src="./static/images/013.png" alt="Card image cap">
+											<img src="/static/images/013.png" alt="Card image cap">
 										</div>
 									  </div>
 									<small class="text-body-secondary">2023.11.2</small>
