--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<title> Just an artwork portfolio :)</title>
-		<link rel="shortcut icon" href="../static/images/favicon.ico">
+		<link rel="shortcut icon" href="/static/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="./static/assets/css/addition.css" />
+		<link rel="stylesheet" href="/static/assets/css/addition.css" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
