Try to fix the img again

--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<title> Just an artwork portfolio :)</title>
-		<link rel="shortcut icon" href="/static/images/favicon.ico">
+		<link rel="shortcut icon" href="./static/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/static/assets/css/addition.css" />
+		<link rel="stylesheet" href="./static/assets/css/addition.css" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
@@ -76,7 +76,7 @@
 
 					<div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
 					  <div class="col">
-						<div class="card card-cover h-8 overflow-hidden text-bg-dark rounded-4 shadow" style="background-image: url('/static/images/045b.png');">
+						<div class="card card-cover h-8 overflow-hidden text-bg-dark rounded-4 shadow" style="background-image: url('./static/images/045b.png');">
 						  <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
 							<h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Portfolio Webpage</h3>
 							<ul class="d-flex list-unstyled mt-auto">
@@ -133,7 +133,7 @@
 					  </div>
 
 					  <div class="col">
-						<div class="card card-cover h-80 text-light rounded-4 shadow" style="background-image: url('/static/images/058b.png');">
+						<div class="card card-cover h-80 text-light rounded-4 shadow" style="background-image: url('./static/images/058b.png');">
 						  <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
 							<h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Watermark Tool</h3>
 							<ul class="d-flex list-unstyled mt-auto">
@@ -190,7 +190,7 @@
 					  </div>
 
 					  <div class="col">
-						<div class="card card-cover h-80 overflow-hidden text-light rounded-4 shadow" style="background-image: url('/static/images/022b.png');">
+						<div class="card card-cover h-80 overflow-hidden text-light rounded-4 shadow" style="background-image: url('./static/images/022b.png');">
 						  <div class="d-flex flex-column h-80 p-5 pb-3 text-shadow-1">
 							<h3 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">To-do app with Gantt</h3>
 							<ul class="d-flex list-unstyled mt-auto">
@@ -261,7 +261,7 @@
 
 						</div>
 						<div class="col-auto d-none d-lg-block" >
-						  <img class="bd-placeholder-img" width="270" height="250" src="/static/images/037.jpg" role="img" >
+						  <img class="bd-placeholder-img" width="270" height="250" src="./static/images/037.jpg" role="img" >
 						</div>
 					  </div>
 					</div>
