--- a/artwork.html
+++ b/artwork.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<title> Just an artwork portfolio :)</title>
-		<link rel="shortcut icon" href="/static/images/favicon.ico">
+		<link rel="shortcut icon" href="./static/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/static/assets/css/addition.css" />
+		<link rel="stylesheet" href="./static/assets/css/addition.css" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
@@ -89,21 +89,21 @@
 					  </div>
 					  <div class="carousel-inner">
 						<div class="carousel-item active">
-						  <img src="/static/images/031.png" class="d-block w-100" alt="...">
+						  <img src="./static/images/031.png" class="d-block w-100" alt="...">
 						  <div class="carousel-caption d-none d-md-block text-muted">
 							<h3 class="fw-bold">Graphic Design</h3>
 							<p>Graphic and Children's Books Illustration Styles</p>
 						  </div>
 						</div>
 						<div class="carousel-item">
-						  <img src="/static/images/08.png" class="d-block w-100" alt="...">
+						  <img src="./static/images/08.png" class="d-block w-100" alt="...">
 						  <div class="carousel-caption d-none d-md-block ">
 							<h3 class="fw-bold">Anime Art Style</h3>
 							<p>For the original characters, commissions and fan-art </p>
 						  </div>
 						</div>
 						<div class="carousel-item text-center">
-						  <img src="/static/images/023.png" class="d-block w-100 " alt="...">
+						  <img src="./static/images/023.png" class="d-block w-100 " alt="...">
 						  <div class="carousel-caption d-none d-md-block">
 							<h3 class="fw-bold">Portrait</h3>
 							<p>For both fan-arts and commissions</p>
@@ -139,13 +139,13 @@
 							  </div>
 							  <div class="carousel-inner px-8 py-12 gap-6 m-10 rounded">
 								<div class="carousel-item active rounded mini" >
-								  <img src="/static/images/011.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/011.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item mini">
-								  <img src="/static/images/021.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/021.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item mini">
-								  <img src="/static/images/027.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/027.png" class="d-block w-100" alt="...">
 								</div>
 							  </div>
 							  <button class="carousel-control-prev" type="button" data-bs-target="#carouselF" data-bs-slide="prev">
@@ -176,26 +176,26 @@
 							  </div>
 							  <div class="carousel-inner px-8 py-12 gap-6 m-10 rounded">
 								<div class="carousel-item active rounded" >
-								  <img src="/static/images/015.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/015.png" class="d-block w-100" alt="...">
 								</div>
 
 								<div class="carousel-item">
-								  <img src="/static/images/017.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/017.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item" >
-								  <img src="/static/images/030.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/030.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								  <img src="/static/images/02.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/02.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								  <img src="/static/images/032.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/032.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								  <img src="/static/images/03.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/03.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								  <img src="/static/images/07.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/07.png" class="d-block w-100" alt="...">
 								</div>
 							  </div>
 							  <button class="carousel-control-prev" type="button" data-bs-target="#carouselSecond" data-bs-slide="prev">
@@ -239,16 +239,16 @@
 							  </div>
 							  <div class="carousel-inner px-8 py-12 gap-6 m-10 rounded">
 								<div class="carousel-item active rounded" >
-								  <img src="/static/images/016.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/016.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								   <img src="/static/images/014.png" class="d-block w-100" alt="...">
+								   <img src="./static/images/014.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								  <img src="/static/images/019.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/019.png" class="d-block w-100" alt="...">
 								</div>
 								<div class="carousel-item">
-								  <img src="/static/images/022.png" class="d-block w-100" alt="...">
+								  <img src="./static/images/022.png" class="d-block w-100" alt="...">
 								</div>
 							  </div>
 							  <button class="carousel-control-prev" type="button" data-bs-target="#carouselT" data-bs-slide="prev">
