--- a/commission.html
+++ b/commission.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<title> Just an artwork portfolio :)</title>
-		<link rel="shortcut icon" href="/static/images/favicon.ico">
+		<link rel="shortcut icon" href="./static/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/static/assets/css/addition.css" />
+		<link rel="stylesheet" href="./static/assets/css/addition.css" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
@@ -135,7 +135,7 @@
 							  <button type="button" class="btn btn-primary w-100 btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#firstModal">Samples</button>
 									  <div class="modal fade" id="firstModal" tabindex="-1" aria-labelledby="firstModalLabel" aria-hidden="true">
 										<div class="modal-dialog modal-dialog-centered">
-											<img class="thumbnail" src="/static/images/036.jpg" alt="Card image cap">
+											<img class="thumbnail" src="./static/images/036.jpg" alt="Card image cap">
 										</div>
 									  </div>
 						  </div>
@@ -156,7 +156,7 @@
 							<button type="button" class="btn btn-primary w-100 btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#secondModal">Samples</button>
 							  <div class="modal fade" id="secondModal" tabindex="-1" aria-labelledby="secondModalLabel" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered">
-									<img class="thumbnail" src="/static/images/034.jpg" alt="Card image cap">
+									<img class="thumbnail" src="./static/images/034.jpg" alt="Card image cap">
 								</div>
 							  </div>
 						  </div>
@@ -177,7 +177,7 @@
 							<button type="button" class="btn btn-primary w-100 btn-lg btn-outline-primary" data-bs-toggle="modal" data-bs-target="#thirdModal">Samples</button>
 							  <div class="modal fade" id="thirdModal" tabindex="-1" aria-labelledby="thirdModalLabel" aria-hidden="true">
 								<div class="modal-dialog modal-dialog-centered">
-									<img class="thumbnail" src="/static/images/035.jpg" alt="Card image cap">
+									<img class="thumbnail" src="./static/images/035.jpg" alt="Card image cap">
 								</div>
 							  </div>
 						  </div>
