--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 
 	<head>
 		<title> Just an artwork portfolio :)</title>
-		<link rel="shortcut icon" href="/static/images/favicon.ico">
+		<link rel="shortcut icon" href="./static/images/favicon.ico">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="/static/assets/css/addition.css" />
+		<link rel="stylesheet" href="./static/assets/css/addition.css" />
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
@@ -98,14 +98,14 @@
 						<div class="col-lg-1 p-4"></div>
 						<div class="col-lg-4 col-12 p-4">
 							<div class="card">
-								<img class="card-img-top" src="/static/images/013.png" alt="Card image cap">
+								<img class="card-img-top" src="./static/images/013.png" alt="Card image cap">
 								<div class="card-body">
 								  <p class="card-text">😽I'd like to share my new work here after every update.</p>
 								  <div class="d-flex justify-content-between align-items-center">
 									  <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">Detail</button>
 									  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
 										<div class="modal-content modal-dialog modal-dialog-centered">
-											<img src="/static/images/013.png" alt="Card image cap">
+											<img src="./static/images/013.png" alt="Card image cap">
 										</div>
 									  </div>
 									<small class="text-body-secondary">2023.11.2</small>
